prover-ray/zkcdriver/testdata/synced/invalid/shift_04.zkc
//error:3:8-10:unexpected token
fn f(x:u8) -> (r:u8) {
  r = ~>>x
  return
}
